# fastapi-microservices

./: .gitignore  README.md  docker-compose.dev.yml  fastapi-microservices.code-workspace  ms-video-converter.code-workspace
compose/auth/: Dockerfile
compose/rabbitmq/: config.yaml  ingress.yaml_bk  secret.yaml  service.yaml  statefulset.yaml
envs/: init-mongo.sh
services/auth/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 03df417653b6_create_users_table.py
services/auth/api/: settings.py
services/auth/api/models/: database.py  users.py
services/auth/api/repositories/: user_repository.py
services/auth/api/routers/: auth.py  user.py
services/auth/api/schemas/: auth_schema.py  user_schema.py
services/auth/api/services/: auth_service.py  user_service.py
services/auth/api/utils/: oauth2.py
services/auth/manifests/: config.yaml  deployment.yaml  secret.yaml  service.yaml
services/converter/: Dockerfile  main.py  pyproject.toml  start.sh
services/converter/api/: settings.py
services/converter/api/db/: db.py
services/converter/api/services/: converter_service.py  rabbitmq_service.py
services/converter/manifests/: config.yaml  deployment.yaml
services/converter/manifets/: config.yaml  deployment.yaml  secret.yaml
services/gateway/: Dockerfile  main.py  pyproject.toml
services/gateway/api/: settings.py
services/gateway/api/routers/: auth.py  health.py  media.py
services/gateway/api/services/: auth_service.py  media_service.py  rabbitmq_service.py
services/gateway/manifests/: config.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
services/notification/: main.py  pyproject.toml  start.sh
services/notification/api/: settings.py
services/notification/api/services/: notification_service.py  rabbitmq_service.py
services/notification/manifests/: config.yaml  deployment.yaml  secret.yaml
