[tool.poetry]
name = "converter"
version = "0.1.0"
description = "Converter service"
authors = ["Miguel Angel <miguelangeldev@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
ruff = "^0.5.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pytest = "^8.2.2"
pymongo = "^4.8.0"
pika = "^1.3.2"
motor = {extras = ["srv"], version = "^3.5.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
output-format = "grouped"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade,
    "I",   # isort
    "D4",  # flake8-docstrings
    "PT",  # flake8-pytest
    "PL",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["D401", "D417"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.format]
# Use single quotes rather than double quotes.
quote-style = "single"
